# agentring

./: .gitignore  Makefile  README.md  pyproject.toml
agentring/: __init__.py
agentring/mcp/: __init__.py  client.py  discovery.py  formats.py  multi_server.py  results.py  runner.py  templates.py  tool_factory.py  types.py  utils.py
examples/: context_manager_example.py  local_example.py  remote_example.py
examples/mcp_agents/: generic_example.py  multi_server_example.py  with_crewai.py  with_langgraph.py
gym_mcp_client/: __init__.py  client.py
tests/: test_client.py  test_mcp_client.py  test_mcp_discovery.py  test_mcp_formats.py  test_mcp_multi_server.py  test_mcp_results.py  test_mcp_runner.py  test_mcp_tool_factory.py
